tests/snapshots/mcp_protocol__notification_message_reply_in_thread_snapshot.snap
---
source: tests/mcp_protocol.rs
expression: notif
---
{
  "jsonrpc": "2.0",
  "method": "notifications/claude/channel",
  "params": {
    "content": "reply in thread",
    "meta": {
      "chat_id": "1000",
      "message_id": "2000",
      "priority": "ambient",
      "reply_to_message_id": "5555",
      "thread_parent_id": "700",
      "ts": "2026-01-01T00:00:00+00:00",
      "user": "threaduser",
      "user_id": "3000"
    }
  }
}
