tests/snapshots/mcp_protocol__notification_message_snapshot.snap
---
source: tests/mcp_protocol.rs
expression: notif
---
{
  "jsonrpc": "2.0",
  "method": "notifications/channel",
  "params": {
    "attachments": [],
    "chat_id": "1000",
    "content": "snapshot content",
    "is_voice_message": false,
    "message_id": "2000",
    "timestamp": "2026-01-01T00:00:00+00:00",
    "type": "message",
    "user": "snapuser",
    "user_id": "3000"
  }
}
