tests/snapshots/mcp_protocol__notification_permission_response_snapshot.snap
---
source: tests/mcp_protocol.rs
expression: notif
---
{
  "jsonrpc": "2.0",
  "method": "notifications/channel",
  "params": {
    "granted": true,
    "request_id": "snap-req-42",
    "type": "permission_response"
  }
}
