tests/snapshots/mcp_protocol__notification_reaction_snapshot.snap
---
source: tests/mcp_protocol.rs
assertion_line: 456
expression: notif
---
{
  "jsonrpc": "2.0",
  "method": "notifications/claude/channel",
  "params": {
    "content": "reacted with 🎉",
    "meta": {
      "chat_id": "1001",
      "emoji": "🎉",
      "message_id": "2001",
      "type": "reaction",
      "user": "reactor",
      "user_id": "3001"
    }
  }
}
