tests/snapshots/mcp_protocol__reply_suppress_ping_false_explicit_gate_rejection.snap
---
source: tests/mcp_protocol.rs
expression: "resp[\"result\"]"
---
{
  "content": [
    {
      "text": "{\"error\":\"channel 999999 is not a permitted outbound target\"}",
      "type": "text"
    }
  ],
  "isError": true
}
