tests/snapshots/mcp_protocol__reply_suppress_ping_true_passes_gate_with_configured_channel.snap
---
source: tests/mcp_protocol.rs
expression: "resp[\"result\"]"
---
{
  "content": [
    {
      "text": "{\"error\":\"failed to send chunk 0: 401: Unauthorized\"}",
      "type": "text"
    }
  ],
  "isError": true
}
